--- a/s/su/sub/submissionmonster.com.html
+++ b/s/su/sub/submissionmonster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the submissionmonster.com privacy policy that was archived on 2005-02-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050210035321id_/http%3A//www.submissionmonster.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the submissionmonster.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615015815id_/http%3A//www.submissionmonster.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head>
 
@@ -91,7 +91,7 @@ this service.
 Your use of Submission Monster's website submission service constitutes a business relationship wherein we provide a promotion 
 service for your website(s). In exchange, Submission Monster reserves the right to use the contact information collected during 
 website submission to deliver notices regarding changes or updates to our service, to provide free sample newsletters, to inform 
-you of additions to the Jayde Online Network of web sites, or to send announcements and carefully screened offers and information 
+you of additions to the GreenWave Online Network of web sites, or to send announcements and carefully screened offers and information 
 from our partners. 
 </p><p>
 With the exception of a autoresponse messages which are sent out when you use our free autosubmission service and contain 
@@ -154,15 +154,17 @@ Questions or suggestions may be sent to:
 <tr>
 <td bgcolor="#FFFFFF" width="760" height="20"> 
 <font face="Arial, Verdana" size="1" color="#222222">
-Jayde Online Network :&nbsp;&nbsp;
+Link Partners :&nbsp;&nbsp;&nbsp;
 <a href="http://www.exactseek.com/" style="text-decoration: none">ExactSeek</a> | 
 <a href="http://www.metawebsearch.com/" style="text-decoration: none">MetaWebSearch</a> | 
+<a href="http://www.blog-search.com/" target="_blank" style="text-decoration: none">Blog-Search</a> | 
+<a href="http://www.goarticles.com/" target="_blank" style="text-decoration: none">GoArticles</a> | 
+<a href="http://www.ezinehub.com/" target="_blank" style="text-decoration: none">EzineHub</a> | 
+<a href="http://www.onseek.com/" target="_blank" style="text-decoration: none">OnSeek</a> | 
 <a href="http://www.sitesondisplay.com/" target="_blank" style="text-decoration: none">SitesOnDisplay</a> | 
+<a href="http://www.maxpromo.com/" target="_blank" style="text-decoration: none">MaxPromo</a> | 
 <a href="http://www.sitepronews.com/" target="_blank" style="text-decoration: none">SiteProNews</a> | 
-<a href="http://www.allbusinessnews.com/" target="_blank" style="text-decoration: none">AllBusinessNews</a> | 
-<a href="http://www.seo-news.com/" target="_blank" style="text-decoration: none">SEO-News</a> | 
-<a href="http://www.goarticles.com/" target="_blank" style="text-decoration: none">GoArticles</a> |
-<a href="http://www.submissionmonster.com/" target="_blank" style="text-decoration: none">SubmissionMonster</a>
+<a href="http://www.seo-news.com/" target="_blank" style="text-decoration: none">SEO-News</a>
 </font>
 </td>
 </tr>
@@ -177,15 +179,13 @@ Jayde Online Network :&nbsp;&nbsp;
 <td>
 <font face="Arial, Verdana" size="1" color="#222222">
 <center>
-<b>Jayde Online, Inc. © Copyright 2004, All Rights Reserved.</b>
+<b>GreenWave Online, Inc. © Copyright 2005, All Rights Reserved.</b>
 </center>
 </font>
 </td>
 </tr><tr>
 
 </tr></tbody></table>
-
-
 
 
 
