--- a/e/eg/egr/egreetings.com.html
+++ b/e/eg/egr/egreetings.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the egreetings.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231120013id_/http%3A//www.egreetings.com/warrants.pd) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the egreetings.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021111id_/http%3A//www.egreetings.com/warrants.pd) for the most accurate reproduction.-->
 
 <html><head>
-<meta name="agmips" content="1.263006">
+<meta name="agmips" content="1.130628">
  
 <title>Find out more about Egreetings.com!</title>
  <script language="JavaScript">
@@ -184,6 +184,8 @@ TABLE {margin:auto;}
 #tools A {margin:-3px 0 0 0; padding:0; line-height:16px; font-size:11px;color:#009;}
 #tools P {margin:0; padding:0; line-height:16px; width:550px; height:18px; clear:right; float:left; text-align:right;}
 
+#grindermsg {color:#fff;}
+
 #hdr {
 background:#fff;
  width:770px;
@@ -195,6 +197,10 @@ border-bottom:solid 1px #00C;
 
 #ftr {background:#fc3;clear:both;text-align:center;}
 .text {font-size: 12px;}
+.textheadsub {font-size: 12px;}
+.textsub {font-size: 11px;}
+.memtexth {font-size: 12px;}
+.memtextsmall {font-size: 11px;}
 
 .smallish, a.smallish:link, a.smallish:visited, a.smallish:active {font-family: Arial, helvetica, sans-serif; font-size:10px;}
 .st {font-family: Arial, helvetica, sans-serif; font-size: 11px; text-decoration:underline; color:#3333cc;}
@@ -231,6 +237,14 @@ font-weight:bold;
 *margin-top:-20px;
 }
 
+a.custmenu:link, a.custmenu:active, a.custmenu:visited {font-family:Verdana, Arial; font-size: 10pt; color: #000066; text-decoration: none }
+a.custmenu:hover {font-family:Verdana, Arial; font-size: 10pt; color: #000066; text-decoration: underline }
+a.custmenua:link, a.custmenua:active, a.custmenua:visited {font-family:Verdana, Arial; font-size: 10pt; font-weight: bold; color: #000066; text-decoration: none }
+.custhead {COLOR: #000000; FONT-FAMILY: Arial,Helvetica; FONT-SIZE: 18px; font-weight: bold;}
+.custcopy {COLOR: #000000; FONT-FAMILY: Arial, Verdana, Helvetica; FONT-SIZE: 12px}
+.custcopys {COLOR: #000000; FONT-FAMILY: Arial, Verdana, Helvetica; FONT-SIZE: 10px}
+.custcopyb {COLOR: #000000; FONT-FAMILY: Arial, Verdana, Helvetica; FONT-SIZE: 12px; font-weight: bold;}
+
 </style> 
 <script type="text/javascript">var cust_ck_name = 'customer';
 var useg_ck_name = 'useg';
@@ -253,13 +267,8 @@ var mcp_ck_name = 'mc_p';</script>
   <a href="http://games.egreetings.com/index.htm?RefID=1000"><img src="http://www.imgag.com/eg/button/btn_games.gif" alt="games" border="0"></a>
   </div>
 </div>
-<div style="width:100%; background: #ffffff; text-align:center; margin-top:-2px;">
-<div id="adunit"><script language="JavaScript">
-var tag="<IFR" + "AME WIDTH=728 HEIGHT=90 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR=#000000 SRC=http://ads.adsag.com/html.ng/adsize=728x90&page=warrants.pd&memstat=afu&site=eg&yr=CUST_YR&gnd=CUST_GND&cat=DFLT&subcat=DFLT&product=><SCRI" + "PT LANGUAGE=Jav" + "aScr" + "ipt SRC=http://ads.adsag.com/js.ng/Params.richmedia=yes&adsize=728x90&page=warrants.pd&memstat=afu&site=eg&yr=CUST_YR&gnd=CUST_GND&cat=DFLT&subcat=DFLT&product=></SCR" + "IPT></IFR" + "AME>";
-tag = tag.replace(/CUST_YR/g, getCustomerAge());
-tag = tag.replace(/CUST_GND/g, getCustomerGender());
-document.write(tag);
-</script></div>
+<div style="width:100%; background: #ffffff;">
+<div id="adunit"></div>
 <div id="hdr">
   <table border="0" cellpadding="0" cellspacing="0" width="770">
   <tbody><tr>
@@ -271,7 +280,7 @@ document.write(tag);
     </td>
  <td width="140" align="right">
       <a href="http://www.egreetings.com/members/signin.pd?referer="><img src="http://www.imgag.com/eg/button/btn_signin.gif" width="55" height="17" alt="Sign In" hspace="3" border="0"></a>
-<a href="javascript:window.document.location.href='https://www.egreetings.com/members/mwho.pd?TI=hxp8945&amp;Q=17194&amp;purl='+encodePurl('');"><img src="http://www.imgag.com/eg/button/btn_join.gif" width="55" height="17" alt="Join" hspace="3" border="0"></a>
+<a href="javascript:openJoin('http://subs.subsag.com/html.ng/adsize=text&amp;page=join&amp;site=eg&amp;ostatus=A&amp;testseg2=C&amp;ahost=http://www.egreetings.com&amp;Params.styles=MKTjoin', '')"><img src="http://www.imgag.com/eg/button/btn_join.gif" width="55" height="17" alt="Join" hspace="3" border="0"></a>
     </td>
   </tr>
   </tbody></table>
@@ -572,12 +581,7 @@ As always, if you have any questions, please feel free to contact us at <a href=
 <td bgcolor="#ffffff" valign="top" width="20" border="0"><img border="0" height="20" src="http://www.imgag.com/eg/common/cornerur.gif" width="20"></td> 
  
 <!--right rail--> 
-<td align="middle" bgcolor="#ffcc33" valign="top" width="145" border="0"><!--genix--><br><script language="JavaScript">
-var tag="<IFR" + "AME WIDTH=120 HEIGHT=600 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR=#000000 SRC=http://ads.adsag.com/html.ng/adsize=sky&page=warrants.pd&memstat=afu&site=eg&yr=CUST_YR&gnd=CUST_GND&cat=DFLT&subcat=DFLT&product=><SCRI" + "PT LANGUAGE=Jav" + "aScr" + "ipt SRC=http://ads.adsag.com/js.ng/Params.richmedia=yes&adsize=sky&page=warrants.pd&memstat=afu&site=eg&yr=CUST_YR&gnd=CUST_GND&cat=DFLT&subcat=DFLT&product=></SCR" + "IPT></IFR" + "AME>";
-tag = tag.replace(/CUST_YR/g, getCustomerAge());
-tag = tag.replace(/CUST_GND/g, getCustomerGender());
-document.write(tag);
-</script><br><!--end genix--></td> 
+<td align="middle" bgcolor="#ffcc33" valign="top" width="145" border="0"><!--genix--><br><br><!--end genix--></td> 
 </tr> 
  
 <!--bottom curve line--> 
@@ -592,7 +596,7 @@ document.write(tag);
 <table bgcolor="#ffcc33" border="0" cellpadding="5" cellspacing="0" width="770">
 <tbody><tr>
 <td bgcolor="#ffcc33" align="center" class="text"><br>
-<a href="javascript:window.document.location.href='https://www.egreetings.com/members/mwho.pd?TI=hxp8945&amp;Q=17194&amp;purl='+encodePurl('');">Join Now</a> 
+<a href="javascript:openJoin('http://subs.subsag.com/html.ng/adsize=text&amp;page=join&amp;site=eg&amp;ostatus=A&amp;testseg2=C&amp;ahost=http://www.egreetings.com&amp;Params.styles=MKTjoin', '')">Join Now</a> 
 <span class="bullet"> • </span>
 <a href="https://www.egreetings.com/members/signin.pd?referer=">Sign In</a> 
 <span class="bullet"> • </span>
@@ -600,9 +604,9 @@ document.write(tag);
 <span class="bullet"> • </span>
 <a href="http://www.egreetings.com/about.pd">About Us</a> 
 <span class="bullet"> • </span>
-<a href="JavaScript:OpenNewWindow('http://www.egreetings.com/advertise.pd','500','300','no')">Advertise With Us</a> 
+<a href="JavaScript:OpenNewWindow('http://www.egreetings.com/advertise.pd','500','300','no')">Advertise With Us</a> <br>
 <span class="bullet"> • </span>
-<a href="http://www.egreetings.com/warrants.pd">Privacy Policy</a>
+<a href="http://www.egreetings.com/new_warrants.pd">Privacy Policy</a>
 <span class="bullet"> • </span>
 <a href="http://www.egreetings.com/legal.pd">Terms of Service</a>
 <span class="bullet"> • </span>
@@ -611,7 +615,7 @@ document.write(tag);
 <a href="http://www.egreetings.com/customer/index.pd">Help</a>
 <br>&nbsp;<br>
 <div class="smallish">E-greetings® is a service of  <img src="http://www.imgag.com/eg/aginteractive.gif" width="100" height="16" border="0" align="absmiddle">.  <br>
-Copyright © 1997-2005 AG.com, Inc. All rights reserved.<br>
+Copyright © 1997-2006 AG.com, Inc. All rights reserved.<br>
 Visit our friends at: <a href="http://www.americangreetings.com" target="_blank">AmericanGreetings.com</a> | <a href="http://www.bluemountain.com" target="_blank">BlueMountain.com</a> | <a href="http://www.bluemountaincards.co.uk" target="_blank">BlueMountain UK</a> | <a href="http://www.kiwee.com" target="_blank">Kiwee</a> | <a href="http://www.MIDIRingtones.com" target="_blank">MIDIRingTones</a>
 <br>&nbsp;<br> </div></td>
 </tr>
@@ -619,7 +623,7 @@ Visit our friends at: <a href="http://www.americangreetings.com" target="_blank"
  
 </center> 
 
-<!-- page generated: Sat Dec 31 07:00:12 2005 -->
+<!-- page generated: Wed Jun 14 22:11:11 2006 -->
 
 
 <script type="text/javascript" src="http://www.imgag.com/js/omniture/sample.js"></script>
@@ -629,7 +633,7 @@ http://www.omniture.com -->
 <script language="JavaScript">//<!--
 var ingroup=inTrackingSample();
 var s_pageName="/warrants.pd";
-var s_server="ag606";
+var s_server="ag368";
 var s_channel="Ecards";
 var s_pageType="";
 var s_prop1="";
@@ -638,7 +642,7 @@ var s_prop3="W";
 var s_prop4="";
 var s_prop5="";
 var s_prop6="";
-var s_prop7="B|B";
+var s_prop7="A|C";
 var s_prop8="";
 var s_prop9="";
 var s_prop10="eg";
@@ -652,7 +656,7 @@ var s_eVar4="afu";
 var s_eVar5="eg";
 var s_eVar6="";
 var s_eVar7="";
-var s_eVar8="B|B";
+var s_eVar8="A|C";
 var s_eVar9="";
 var s_eVar10="";
 try{s_eVar3=useg;s_prop1=s_eVar3;}catch(er){s_eVar3='afu_none';s_prop1=s_eVar3;}
@@ -670,6 +674,21 @@ if(ingroup) { var s_wd=window,s_tm=new Date;if(s_code!=' '){s_code=s_dc(
 'agegreetings');if(s_code)document.write(s_code)}else
 document.write('<im'+'g src="http://agegreetings.112.2O7.net/b/ss/agegreetings/1/G.7--FB/s'+s_tm.getTime()+'?[AQB]'
 +'&j=1.0&[AQE]" height="1" width="1" border="0" alt="" />'); }
+
+function do_omniture() {
+  if(ingroup) {
+     var s_wd=window,s_tm=new Date;if(s_code!=' '){s_code=s_dc('agegreetings');if(s_code)document.write(s_code)
+  }else {
+     var img = document.createElement('img');
+     img.src = "http://agegreetings.112.2O7.net/b/ss/agegreetings/1/G.7--FB/s'+s_tm.getTime()+'?[AQB]' +'&j=1.0&[AQE]";
+     img.height="1";
+     img.width="1";
+     img.border="0";
+     img.alt="";
+     document.getElementsByTagName('body').item(0).appendChild(img);
+   }
+}
+}
 //--></script><script language="JavaScript"><!--
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
 //--></script><noscript><img
