--- a/v/va/van/vandyke.com.html
+++ b/v/va/van/vandyke.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vandyke.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218023505id_/http%3A//vandyke.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vandyke.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021638id_/http%3A//vandyke.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/generaltemplate.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
@@ -19,17 +19,19 @@
 <script language="JavaScript" src="/css/MM_script.js" type="text/javascript"></script>
 <script language="JavaScript" src="/__utm.js" type="text/javascript"></script>
 
-<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<link href="/css/vshell.css" rel="stylesheet" type="text/css">
+<!-- InstanceEndEditable -->
 <!--htdig_noindex-->
 </head>
 
-<body onload="MM_preloadImages('/images/menu/left_menu/circle_on.gif')">
+<body>
 
 <!-- begin top logo area -->
 <table width="760" border="0" cellpadding="0" cellspacing="0" id="toplogo">
   <tbody><tr>
   <td rowspan="2" width="10"><img src="/images/clear.gif" alt="" width="10" height="10"></td>
-    <td rowspan="2"><img src="/images/home/vandyke_logo.gif" alt="" width="250" height="75"></td>
+    <td rowspan="2"><a href="http://www.vandyke.com"><img src="/images/home/vandyke_logo.gif" alt="" width="250" height="75" border="0"></a></td>
     <td rowspan="2"><img src="/images/home/we_listen1.gif" alt="" width="317" height="75"></td>
     <td><form method="post" action="http://www.vandyke.com/cgi-bin/htsearch" name="search" id="search">
 	                 <input type="hidden" name="config" value="vandyke">
@@ -94,98 +96,21 @@
 <!--  end shopping cart and crumbtrail table  -->
 <!--/htdig_noindex-->
 <!-- InstanceBeginEditable name="mainarea" -->
-<table width="760" border="0" cellspacing="0" cellpadding="0">
-  <tbody><tr> 
-    <td width="190" valign="top"> 
-      <table width="190" border="0" cellspacing="2" cellpadding="0" id="leftnav">
-        <tbody><tr> 
-          <td>&nbsp;</td>
-          <td colspan="3"> 
-            <!-- placeholder for graphic -->
-            <div align="right"><img src="/images/clear.gif" width="30" height="30"></div>
-          </td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td colspan="3" class="productname"><img src="/images/headings/privacy.gif" width="88" height="35"></td>
-        </tr>
-        <tr> 
-          <td><img src="/images/clear.gif" width="1" height="1"></td>
-          <td colspan="3"> 
-            <!--  1px horizontal line  -->
-            <div align="right"><img src="/images/gray_line.gif" width="88" height="1"></div>
-          </td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><img src="/images/clear.gif" width="130" height="1"></td>
-          <td> 
-            <div align="center"><img src="/images/gray_line.gif" width="1" height="65"></div>
-          </td>
-          <td><img src="/images/clear.gif" width="30" height="8"></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td> 
-            <div align="right"><a href="/support/updates.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle02','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/updates_policy.gif" width="94" height="15" border="0"></a> 
-            </div>
-          </td>
-          <td> 
-            <div align="center"><a href="/support/updates.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle02','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/circle.gif" width="15" height="15" name="leg_circle02" border="0"></a></div>
-          </td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td> 
-            <div align="right"><a href="/support/about_evaluation.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle03','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/evaluation.gif" width="72" height="15" border="0"></a> 
-            </div>
-          </td>
-          <td> 
-            <div align="center"><a href="/support/about_evaluation.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle03','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/circle.gif" width="15" height="15" name="leg_circle03" border="0"></a></div>
-          </td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td> 
-            <div align="right"><a href="/download/export.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle04','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/encryption_export.gif" width="116" height="15" border="0"></a> 
-            </div>
-          </td>
-          <td> 
-            <div align="center"><a href="/download/export.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle04','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/circle.gif" width="15" height="15" name="leg_circle04" border="0"></a></div>
-          </td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td> 
-            <div align="right"><a href="/purchase/direct/faq.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle05','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/orders_faq.gif" width="70" height="15" border="0"></a> 
-            </div>
-          </td>
-          <td> 
-            <div align="center"><a href="/purchase/direct/faq.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('leg_circle05','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/circle.gif" width="15" height="15" name="leg_circle05" border="0"></a></div>
-          </td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td> 
-            <div align="right"><a href="/contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('menu10','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/contact_us.gif" width="76" height="15" border="0" name="contactus"></a></div>
-          </td>
-          <td> 
-            <div align="center"><a href="/contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('menu10','','/images/menu/left_menu/circle_on.gif',1)"><img src="/images/menu/left_menu/circle.gif" width="15" height="15" name="menu10" border="0"></a></div>
-          </td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-      </tbody></table>
-      <!-- #BeginLibraryItem "/Library/quotebox160w.lbi" --><!--  Begin I need to Quote box here /////////////////////////////////// -->	  
+<table width="770" border="0" cellspacing="10" cellpadding="0">
+  <tbody><tr>
+<!-- main area navigation  -->
+    <td id="leftcol" width="160" valign="top">
+<div id="leftnav">
+<p><a href="/support/about_evaluation.html">Evaluation</a></p>
+<p><a href="/support/updates.html">Updates Policy</a></p>
+<p><a href="/aboutus/news/pressreleases/index.html">Press Releases</a></p>
+<p><a href="/aboutus/news/onlinepresskit/index.html">Press Kit</a></p>
+<p><a href="/aboutus/employment/index.html">Employment</a></p>
+<p><a href="javascript:;" onclick="MM_openBrWindow('https://secure.vandyke.com/cgi-bin/customer_form.php?cft=other','comment','scrollbars=yes,resizable=yes,width=530,height=630')">FeedBack</a></p>
+<p><a href="/contact.html">Contact</a></p>
+</div>
+<br>
+<!--  begin I need to  --><!-- #BeginLibraryItem "/Library/quotebox160w.lbi" --><!--  Begin I need to Quote box here /////////////////////////////////// -->	  
 <table width="160" border="0" align="center" cellpadding="0" cellspacing="0">
           <tbody><tr class="in2bg">
             <td>
@@ -217,29 +142,27 @@
             <td>&nbsp;</td>
           </tr>
         </tbody></table><br>        
-<!-- End I need to Quote box here ///////////////////////////////////////// --><!-- #EndLibraryItem --><table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr> 
-          <td> <!-- #BeginLibraryItem "/Library/copyright.lbi" -->
+<!-- End I need to Quote box here ///////////////////////////////////////// --><!-- #EndLibraryItem --><!-- end of I need to  --><!-- #BeginLibraryItem "/Library/copyright.lbi" -->
 <p class="copyright"><a href="/legalnotices.html">Legal Notices</a> | <a href="/privacy.html">Privacy 
   Policy</a> 
   <br><a href="/sitemap.html">Site Map</a> | <a href="/purchase/refund_policy.html">Refund 
   Policy</a><br>
-  Copyright © 2005<br>
+  Copyright © 1995-2006<br>
   VanDyke Software, Inc.<br> 
   All rights reserved.<br>
 </p>
 <!-- #EndLibraryItem --></td>
-        </tr>
-      </tbody></table>
-    </td>
-    <td valign="top"> 
-      <table border="0" cellspacing="10" cellpadding="5" width="520">
-        <tbody><tr> 
-          <!--  1px vertical line  -->
-          <td width="1" valign="top"><img src="/images/blk_line.gif" width="1" height="490" align="top" name="vertical">
-          </td>
-          <td valign="top" align="left" class="textgeneral"> 
-            <p align="right"><b>Last updated:</b> May 4, 2005&nbsp;&nbsp;</p>
+<!-- Begin second column -->
+<td width="580" valign="top">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tbody><tr>
+    <td><h1>Privacy</h1></td>
+    <td><p align="right"><b>Last updated:</b> May 4, 2005&nbsp;&nbsp;</p></td>
+  </tr>
+</tbody></table>
+
+
+
             <p>VanDyke Software® is committed to protecting your privacy. 
               The following discloses our information collection and use practices. 
               We collect industry-standard information to help us provide you 
@@ -293,15 +216,14 @@
               and develop new products that may interest you.</p>
 
             <p><b>Downloading Secure Products:</b> Download of VShell® Server, 
-              SecureCRT®, SecureFX®, and Entunnel™ require a street 
+              SecureCRT® and SecureFX® require a street 
               address, phone number, and e-mail address. This is done to verify 
               location as required by U.S. export control regulations. Information 
               submitted is checked in real time by CyberSource, a third party 
               service that monitors order acceptance against a continually changing 
               list of denied countries or persons, and electronically verifies 
               the customer's location. Names or company names and addresses of 
-              customers purchasing licenses for VShell Server, SecureCRT, SecureFX, 
-              and Entunnel outside the U.S. and Canada must be reported to the 
+              customers purchasing licenses for VShell Server, SecureCRT and SecureFX  outside the U.S. and Canada must be reported to the 
               Bureau of Industry and Security. No other personal information is 
               reported.</p>
 
@@ -343,15 +265,21 @@ document.write('<a href=\"mail' + 'to:' + myName + '@' + myDomain + '\">' + myNa
             </blockquote>	        <!-- #BeginLibraryItem "/library/trademark_all.lbi" -->
 <div align="center" class="copyright">VShell, SecureCRT, SecureFX, Entunnel, CRT, 
   and AbsoluteFTP are trademarks or registered trademarks of VanDyke Software, Inc. in the United States and/or other countries. All other trademarks or registered trademarks 
-are the property of their respective owners.</div><!-- #EndLibraryItem --></td>
-        </tr>
-      </tbody></table>
-    </td>
-  </tr>
+are the property of their respective owners.</div><!-- #EndLibraryItem -->
+<!-- End second column -->
+</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>&nbsp;</td>
+</tr>
 </tbody></table>
+
+
+
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="dateStamp" -->
-<!-- This page was last updated on 2005-22-06 yyyy-dd-mm -->
+<!-- This page was last updated on 2006-20-04 yyyy-dd-mm -->
 <!-- InstanceEndEditable -->
 
 <!-- InstanceEnd -->
