--- a/c/ca/cas/casa.gov.au.html
+++ b/c/ca/cas/casa.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the casa.gov.au privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229060819id_/http%3A//www.casa.gov.au/tools/privacy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the casa.gov.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021640id_/http%3A//casa.gov.au/tools/privacy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 
