--- a/j/je/jen/jennycraig.com.html
+++ b/j/je/jen/jennycraig.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jennycraig.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231164506id_/http%3A//jennycraig.com/corporate/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jennycraig.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021844id_/http%3A//www.jennycraig.com/corporate/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Jenny Craig Corporate: Privacy Policy</title>
@@ -97,10 +97,10 @@ window.onload=function(){
 //-->
 </script>
 <script language="javascript" src="/js/hm531_public/HM_Loader.js"></script>
-<script type="text/javascript" src="https://sm-jennycraig.proficient.com/cf/scripts/postLoadIwatch.js?c=439008" defer=""></script></head><body>
+</head><body>
 <table cellpadding="0" cellspacing="0" border="0" width="780" align="center" bgcolor="#FFFFFF">
 <tbody><tr>
-    <td><a href="/"><img src="/img/layout/logo.gif" alt="Lose Weight With Jenny Craig" width="398" height="100" border="0"></a></td>
+    <td><img src="/img/layout/logo.gif" alt="Lose Weight With Jenny Craig" width="398" height="100" border="0" usemap="#LogoMap"></td>
 	<td align="right">
 	
 	  <a href="/offer/offerscoupons.asp?offerid=2"><img src="/img/banner_home.jpg" alt="Jenny Craig's Lose Weight Offer" width="297" height="71" border="0"></a>
@@ -226,8 +226,8 @@ window.onload=function(){
 	
 	<br></span><br>
 	<span class="footlink"><a href="/corporate/company/contact.asp" class="footlink">Contact Us</a>  ::  <a href="/corporate/" class="footlink">Corporate</a>  ::  <a href="/search/index.asp" class="footlink">Search</a>  ::  <a href="/programs/faqs.asp" class="footlink">Help</a>  ::  <a href="/corporate/franchise/index.asp" class="footlink">Franchise Info</a>  ::  <a href="/corporate/news/index.asp" class="footlink">Media Relations</a>   ::  <a href="/corporate/privacy.asp" class="footlink">Privacy Policy</a>  :: <a href="/corporate/aup.asp" class="footlink">Terms of Use</a><br>
-	<a href="http://www.jennycraig.com.au" class="footlink">Jenny Craig Australia</a>  ::  <a href="https://signup.cj.com/member/brandedPublisherSignUp.do?air_refmerchantid=1011215" class="footlink">Affiliate Program</a>  ::  <a href="/sitemap/" class="footlink">Site Map</a>  ::  <a href="/summary.asp" class="footlink">More Weight Loss Info</a>  ::  <a href="/account/login.asp?fp=myjenny/index.asp" class="footlink">myJenny</a>  ::  <a href="/corporate/company/jobopps.asp" class="footlink">Job Opportunities</a><br>
-	<a href="/programs/" class="footlink">LOSE WEIGHT</a>  ::  <a href="/success/" class="footlink">SUCCESS STORIES</a>  ::  <a href="/recipes/" class="footlink">RECIPES</a>  ::  <a href="/shop/" class="footlink">SHOP</a>  ::  <a href="/etools/" class="footlink">ETOOLS</a>  ::  <a href="/myjenny/menu/" class="footlink">MENU PLANNER</a>  ::  <a href="/locator/index.asp" class="footlink">FIND A CENTRE</a>  ::  <a href="/corp_programs/" class="footlink">Corporate Programs</a>
+	<a href="/programs/" class="footlink">LOSE WEIGHT</a>  ::  <a href="/success/" class="footlink">SUCCESS STORIES</a>  ::  <a href="/recipes/" class="footlink">RECIPES</a>  ::  <a href="/shop/" class="footlink">SHOP</a>  ::  <a href="/etools/" class="footlink">ETOOLS</a>  ::  <a href="/myjenny/menu/" class="footlink">MENU PLANNER</a>  ::  <a href="/corp_programs/" class="footlink">Corporate Programs</a> <br>
+	<a href="/kirstie/" class="footlink">Kirstie Alley's Blog</a> :: <a href="/sitemap/" class="footlink">Site Map</a>  :: <a href="/account/login.asp?fp=myjenny/index.asp" class="footlink">myJenny</a>  ::  <a href="/corporate/company/jobopps.asp" class="footlink">Job Opportunities</a> :: <a href="/locator/index.asp" class="footlink">FIND A CENTRE</a> 
 	
 	<br></span><br></td>
 </tr>
@@ -256,13 +256,16 @@ window.onload=function(){
 	</td>
 </tr>
 <tr>
-	<td align="center"><span class="footlink" style="text-transform: none;">© 2005 Jenny Craig, Inc. All rights reserved.</span></td>
+	<td align="center"><span class="footlink" style="text-transform: none;">© 2006 Jenny Craig, Inc. All rights reserved.</span></td>
 </tr>
 </tbody></table>
 <br><br>
-<!-- Proficient System, Inc. Release 4.0G START -->
-<script src="/js/proficient_integration_base.js" type="text/javascript"></script>
-<!-- Proficient System, Inc. Release 4.0G END -->
+
+<map name="LogoMap">
+  <area shape="rect" coords="230,8,395,95" href="/account/clicktocall2.asp">
+  <area shape="rect" coords="30,6,227,94" href="/">
+</map>
+
 <!-- Fireclick Web Analytics - COPYRIGHT 1999-2005 - Please do not modify this code-->
 <script language="javascript">
 <!--
