--- a/x/xx/xxx/xxxkey.com.html
+++ b/x/xx/xxx/xxxkey.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the xxxkey.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231090531id_/http%3A//www.xxxkey.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the xxxkey.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615021911id_/http%3A//xxxkey.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>XXXKey - Adult Entertainment Network</title>
