--- a/w/we/wes/westbyte.com.html
+++ b/w/we/wes/westbyte.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the westbyte.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218045108id_/http%3A//www.westbyte.com/index.phtml%3Fpage%3Dprivacy%26tmp%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the westbyte.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022029id_/http%3A//www.westbyte.com/index.phtml%3Fpage%3Dprivacy%26tmp%3D1) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -90,8 +90,38 @@ Subscribe to e-mail list:</span><br>
 	      </td>
         </tr>
       </tbody></table>
-      <p>&nbsp;</p>
-	
+      <table width="100%" border="0" cellspacing="6" cellpadding="0">
+        <tbody><tr> 
+          <td align="center"> 
+<script type="text/javascript"><!--
+google_ad_client = "pub-5072020283501514";
+google_ad_width = 125;
+google_ad_height = 125;
+google_ad_format = "125x125_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "CCCCCC";
+google_color_bg = "FFFFFF";
+google_color_link = "000000";
+google_color_url = "666666";
+google_color_text = "333333";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+<br><br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-5072020283501514";
+google_ad_width = 125;
+google_ad_height = 125;
+google_ad_format = "125x125_as_rimg";
+google_cpa_choice = "CAAQo-aZzgEaCM3CU97Siy5UKK2293M";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+ 	      </td>
+        </tr>
+      </tbody></table>
+      <p>&nbsp;</p>	
 	</td>
     <td valign="top">
 <!--Start Navigator -->
@@ -178,12 +208,12 @@ Subscribe to e-mail list:</span><br>
 <table width="100%" border="0" cellspacing="0" cellpadding="6">
   <tbody><tr> 
     <td width="44" background="../images/bkg02.gif"><img src="/images/list03wb.gif" width="44" height="44"></td>
-    <td width="240" bgcolor="#EEEEEE" background="../images/bkg02.gif">
-<p><span class="bottom1">(c) WestByte Software, 1998-2005</span><br>
+    <td width="280" bgcolor="#EEEEEE" background="../images/bkg02.gif">
+<p><span class="bottom1">(c) WestByte Software, 1998-2006</span><br>
       <span class="bottom2"><a href="http://www.westbyte.com/index.phtml?page=privacy&amp;tmp=1">Privacy</a> 
       | <a href="http://www.westbyte.com/index.phtml?page=about&amp;tmp=1">Contact</a></span><br>
-        <span class="design">Designed by <a href="http://www.one.com.ua/resolution/" class="design"><b>resolution</b></a>. 
-        Powered by <a href="http://www.one.com.ua/resolution/" class="design"><b>readmin</b></a>.</span></p>
+        <span class="design">Designed by <a href="http://www.westbyte.com/" class="design"><b>westbyte media</b></a>. 
+        Powered by <a href="http://www.westbyte.com/" class="design"><b>readmin cms</b></a>.</span></p>
     </td>
     <td bgcolor="#EEEEEE" background="../images/bkg02.gif"> 
           </td>
