--- a/w/we/web/webmasterquest.com.html
+++ b/w/we/web/webmasterquest.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webmasterquest.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231201714id_/http%3A//webmasterquest.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webmasterquest.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022133id_/http%3A//www.webmasterquest.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement for WebmasterQuest</title>
@@ -20,7 +20,7 @@ hits, free advertising">
 
 <body bgcolor="#96B4CE" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" link="#0080C0" vlink="#0080C0" alink="#0080C0" background="images/bg.gif">
 
-<div align="center"><a href="/click.php?BannerID=46010" target="_blank" onmouseover="this.T_WIDTH=430; return escape('Support our sponsors, please note clicking on the banner will open a new window.');"><img src="http://www.3-sos.com/pics/banner1.gif" width="468" height="60" border="1"></a><br><a href="/advertise.php" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #000000;">Advertise your banner here. As low as $0.48 CPM</a></div><br>
+<div align="center"><a href="/click.php?BannerID=62566" target="_blank" onmouseover="this.T_WIDTH=430; return escape('Get the BEST ROTATOR and it is Absolutely FREEYes it is FREE<br><br>Support our sponsors, please note clicking on the banner will open a new window');"><img src="http://www.pageswirl.com/images/PageSwirlBanner8.jpg" width="468" height="60" border="1"></a><br><a href="/advertise.php" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; color: #000000;">Advertise your banner here. As low as $0.48 CPM</a></div><br>
 <table border="0" cellpadding="0" cellspacing="0" width="776" align="center">
 	<tbody><tr>
 		<td>
@@ -259,7 +259,7 @@ webmaster@webmasterquest.com
 <a href="/privacy.php" style="font-family: Arial,Times; font-size: 10px; color:#FFFFFF">Privacy</a> -
 <a href="/contact/index.php" style="font-family: Arial,Times; font-size: 10px; color:#FFFFFF">Contact</a>
 </div>
-<div align="center" style="font-family: Arial,Times; font-size: 10px; color:#FFFFFF"><b>Copyright © 2001-2005 by WebmasterQuest.com</b></div>
+<div align="center" style="font-family: Arial,Times; font-size: 10px; color:#FFFFFF"><b>Copyright © 2001-2006 by WebmasterQuest.com</b></div>
 
 <script language="JavaScript" type="text/javascript" src="/wz_tooltip.js"></script>
 
